k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-practice-service
  labels:
    app: java-practice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: java-practice
